<resources>
    <string name="msgt_nointernetconnection">Please check your internet connection</string>
    <string name="msgt_emptyresponse">Empty response form server</string>
    <string name="msgt_comingsoon">Coming Soon</string>
    <string name="msgt_emptylist">Empty list from server</string>
    <string name="google_maps_key">AIzaSyDbtPLpwrcS571PfdJw9ednQAemxBiNhUA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ok">OK</string>
    <string name="gps_note">* Note - Make sure that your GPS and WiFi is ON and every permission is enabled. Wait for 5 min, If your location is not visible then enter PIN Code manually and get site list.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="home">Home</string>
    <string name="scan_button">Scan</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="starttest">Start the Test</string>
    <string name="writedata">Write Calib Data</string>
    <string name="getdata">Get Data</string>
    <string name="stoptest">Stop the Test</string>
    <string name="canceled">Canceled!</string>
    <string name="scandevices">Scan Devices</string>
    <string name="select_district">Select District</string>
    <string name="select_month_year">Select Month and Year</string>
    <string name="sample_completed">Sample Completed\n(Pending for Authentication)</string>
    <string name="sample_authenticated">Sample Authenticated\n(Pending for Internal Doctor Screening)</string>
    <string name="applicable_for_billing">Applicable for Billing\n(Pending for Post Camp)</string>
    <string name="export">Export</string>
    <string-array name="camp_status">
        <item>All</item>
        <item>Pending</item>
        <item>Rejected</item>
        <item>Approved</item>
    </string-array>
    <string name="bluetooth_title">Bluetooth</string>
    <string name="search_devices">Search Devices</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="caucasian">Caucasian</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="certain_days_week">Certain days</string>
    <string name="everyday">Everyday</string>
    <string name="number_of_days">Number of days</string>
    <string name="bev">BEV</string>
    <string name="eotv">EOTV</string>
    <string name="erv">ERV</string>
    <string name="evc">EVC</string>
    <string name="fef10">FEF10</string>
    <string name="fef25">FEF25</string>
    <string name="fef2575">FEF25-75</string>
    <string name="fef2575fvc">FEF25-75/FVC</string>
    <string name="fef40">FEF40</string>
    <string name="fef50">FEF50</string>
    <string name="fef50FVC">FEF50/FVC</string>
    <string name="fef60">FEF60</string>
    <string name="fef75">FEF75</string>
    <string name="fef80">FEF80</string>
    <string name="fet">FET</string>
    <string name="fet2575">FET25-75</string>
    <string name="fev025">FEV0.25</string>
    <string name="fev05">FEV0.5</string>
    <string name="fev05fvc">FEV0.5/FVC</string>
    <string name="fev075">FEV0.75</string>
    <string name="fev075fvc">FEV0.75/FVC</string>
    <string name="t0">T0</string>
    <string name="fev1f">FEV1/FEV6</string>
    <string name="fev1fev6">FEV1/FEV6</string>
    <string name="fev1fiv1">FEV1/FIV1</string>
    <string name="fev1fvc">FEV1/FVC</string>
    <string name="fev1vc">FEV1/VC</string>
    <string name="fev3">FEV3</string>
    <string name="fev3fvc">FEV3/FVC</string>
    <string name="fev6fvc">FEV6/FVC</string>
    <string name="fev6">FEV6</string>
    <string name="fiV025">FIV0.25</string>
    <string name="fiV05">FIV0.5</string>
    <string name="fiV1">FIV1</string>
    <string name="fif25">FIF25</string>
    <string name="fif251">FIF25(MIF75)</string>
    <string name="fif50">FIF50</string>
    <string name="fif501">FIF50(MIF50)</string>
    <string name="fif50fef50">FIF50/FEF50</string>
    <string name="fif75">FIF75</string>
    <string name="fif751">FIF75(MIF25)</string>
    <string name="fiv1">FIV1</string>
    <string name="fiv1fivc">FIV1/FIVC</string>
    <string name="fivc">FIVC</string>
    <string name="frc">FRC</string>
    <string name="fvc6">FVC6</string>
    <string name="ic">IC</string>
    <string name="irv">IRV</string>
    <string name="ivc">IVC</string>
    <string name="fif2575">FIF25-75</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="afternoon">Afternoon</string>
    <string name="trials">Trials</string>
    <string name="flow_l_s_">Flow (L/s)</string>
    <string name="flow_volume">Flow/Volume</string>
    <string name="volume_seco">Volume/Seconds</string>
    <string name="volume_l">Volume (L)</string>
    <string name="measurement">Measurements</string>
    <string name="z_score">Z-score</string>
    <string name="lnn">LLN</string>
    <string name="copd">COPD</string>
    <string name="volume_litre">Volume (L)</string>
    <string name="trial_4"> 4 </string>
    <string name="trial_3"> 3 </string>
    <string name="trial_2"> 2 </string>
    <string name="trial_1"> 1 </string>
    <string name="addpost">Add POST</string>
    <string name="finishtest">Finish Test</string>
    <string name="remove_this_result">Remove This result</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="compare">Compare</string>
    <string name="session_qua">Session quality</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="add_trial">+ Add Trial</string>
    <string name="last_session">Last session\n</string>
    <string name="all">All</string>
    <string name="post">POST</string>
    <string name="title_activity_team_camp_mapping">TeamCampMappingActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="site_selection">Site Selection</string>
    <string name="test_mapping">Test and Lab Mapping</string>
    <string name="device_allocation">Device Allocation</string>
    <string name="consumable_allocation">Consumable Allocation</string>
    <string name="reagent_available">Reagent Available</string>
    <string name="resource_allocation">Resource Allocation</string>
    <string name="secs">Secs</string>
    <string name="pre_test">Pre-Test</string>
    <string name="ensure_a_ti">Ensure a tight seal around your mouthpiece</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="you_are_doing_good">You are doing good</string>
    <string name="keep_blowing">Keep blowing</string>
    <string name="insufficient_blow">Insufficient Blow</string>
    <string name="fan_moving">Wait until fan stop moving</string>
    <string name="time_out">Timeout, try again</string>
    <string name="no_device_found">No device found</string>
    <string name="saved_device_not_found">Saved Device not found</string>
    <string name="invalid_trail_plz_retry">Invalid trial, please retry</string>
    <string name="start_blowing">Start blowing</string>
    <string name="device_disconnected">Device is disconnected</string>
    <string name="trial_completed">Trial Completed</string>
    <string name="test_completed">Test completed</string>
    <string name="no_data_available">No data available</string>
    <string name="click_here_to_start">Click Here to Start</string>
    <string name="start">Start</string>
    <string name="courier_date">Courier Date <font color='#FD626A'>*</font></string>
    <string name="courier_time">Courier Time <font color='#FD626A'>*</font></string>
    <string name="receive_courier_date">Receive Date <font color='#FD626A'>*</font></string>
    <string name="receive_courier_time">Receive Time <font color='#FD626A'>*</font></string>
    <string name="expected_arrival_date">Expected Arrival Date <font color='#FD626A'>*</font></string>
    <string name="expected_arrival_time">Expected Arrival Time <font color='#FD626A'>*</font></string>
    <string name="mode_of_transport">Mode Of Transport <font color='#FD626A'>*</font></string>
    <string name="courier_company_name">Courier Company Name <font color='#FD626A'>*</font></string>
    <string name="docket_no">Docket No. <font color='#FD626A'>*</font></string>
    <string name="bus_no">Bus No. <font color='#FD626A'>*</font></string>
    <string name="vehicle_no">Vehicle No. <font color='#FD626A'>*</font></string>
    <string name="driver_contact_no">Contact No. <font color='#FD626A'>*</font></string>
    <string name="runner_boy">Runner Boy <font color='#FD626A'>*</font></string>
    <string name="runner_boy_contact_no">Runner Boy Contact No. <font color='#FD626A'>*</font></string>
    <string name="corier_accept_remark">Remark <font color='#FD626A'>*</font></string>
    <string name="barcode">Sample Barcode <font color='#FD626A'>*</font></string>
    <string name="barcode1">Courier Barcode <font color='#FD626A'>*</font></string>
    <string name="corier_accept_remark_other">Remark  <font color='#FD626A'>*</font></string>
    <string name="amount_paid">Amount Paid <font color='#FD626A'>*</font></string>
    <string name="amount_paid_receiver">Amount Paid by Receiver <font color='#FD626A'>*</font></string>
    <string name="total_no_of_boxes">Total No. Of Boxes <font color='#FD626A'>*</font></string>
    <string name="total_no_of_samples">Total No. Of Units or Tubes <font color='#FD626A'>*</font></string>
    <string name="resource_name">Select Resource <font color='#FD626A'>*</font></string>
    <string name="delivery_executive">Delivery Executive / Team <font color='#FD626A'>*</font></string>
    <string name="sample_temperature">Sample Temperature<font color='#FD626A'>*</font></string>
    <string name="tube_counts">Tube Counts <font color='#FD626A'>*</font></string>
    <string name="Sent">Sent </string>
    <string name="Receive">Receive</string>
    <string name="test_counts">Test Counts <font color='#FD626A'>*</font></string>
    <string name="send_courier_photo">Photo of courier with receipt <font color='#FD626A'>*</font></string>
    <string name="receiver_remark">Remark <font color='#FD626A'>*</font></string>
    <string name="hnt_seldate">Select Date</string>
    <string name="cust_name_error">No Such Customer Name Found</string>
    <string name="btn_submit">Submit</string>
    <string name="select_time">Select Time</string>
    <string name="msgt_cancel">Cancelled</string>
    <string name="msg_nointernetconnection">Please check your internet connection</string>
    <string name="selcttentetivevvollectiontime">Please Select Tentetive Collection Time</string>
    <string name="timesame">Time Is Same </string>
    <string name="msg_latlongnotfound">Location details not availibale</string>
    <string name="msg_cannottransfer">Can\'t transfer Accepted Order</string>
    <string name="plzselectcollectionboy">Please Select Collection Boy</string>
    <string name="plzenterremark">Please Enter Remark</string>
    <string name="msg_forgotpass">Enter mobile number </string>
    <string name="msg_mandatory">Please fill all mandatory fields</string>
    <string name="msgt_versionempty">Version code is empty</string>
    <string name="msgt_exitmsg">Please click BACK again to exit</string>
</resources>