<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar_courier" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sample_temperature"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tv_sample_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_expense"
                    android:drawableRight="@drawable/icon_downarrowbk"
                    android:hint="Select Sample Temperature"
                    android:padding="10dp"
                    android:paddingTop="5dp"
                    android:textSize="14sp" />
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/lightyellow"
                android:padding="5dp"
                android:text="@string/tube_counts"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tube_counts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/lightyellow"
                android:padding="5dp"
                android:text="@string/test_counts"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_test_counts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:text="@string/total_no_of_samples"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/edt_sample_count"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_expense"
                    android:hint="Enter Total No. of units or tubes"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="7"
                    android:padding="10dp"
                    android:textColor="@color/cexpensetext"
                    android:textSize="14sp" />
            </TableRow>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="20dp"
                android:background="@color/blue"
                android:text="@string/btn_submit"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>

