<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar_courier" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_sender_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:drawableRight="@drawable/right_arrow"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="Courier Information By Sender"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/receive_courier_date"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="5dp">

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/dp_40"
                            android:layout_weight="1"
                            android:background="@drawable/border_expense"
                            android:drawableRight="@drawable/calender"
                            android:hint="@string/hnt_seldate"
                            android:padding="10dp"
                            android:textColor="@color/cexpensetext"
                            android:textSize="14sp" />
                    </TableRow>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/receive_courier_time"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="5dp">

                        <TextView
                            android:id="@+id/tv_time"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/dp_40"
                            android:layout_weight="1"
                            android:background="@drawable/border_expense"
                            android:drawableRight="@drawable/icon_time"
                            android:hint="@string/select_time"
                            android:padding="10dp"
                            android:textColor="@color/cexpensetext"
                            android:textSize="14sp" />
                    </TableRow>

                </LinearLayout>

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Total No.Of Samples"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <EditText
                        android:id="@+id/edt_sample_count"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"

                        android:background="@drawable/border_expense"
                        android:hint="Enter Total No. Of Samples"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="7"
                        android:padding="10dp"
                        android:textColor="@color/cexpensetext"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck" />
                </TableRow>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/amount_paid_receiver"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <EditText
                        android:id="@+id/edt_amount"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_expense"
                        android:hint="Enter Amount"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="7"
                        android:padding="10dp"
                        android:textColor="@color/cexpensetext"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck" />
                </TableRow>

                <LinearLayout
                    android:id="@+id/llBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Sample Barcode"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/tvBarcode"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:background="@drawable/border_expense"
                        android:drawableEnd="@drawable/icon_downarrowbk"
                        android:drawableRight="@drawable/icon_downarrowbk"
                        android:hint="Select Barcode"
                        android:padding="10dp"
                        android:textColor="@color/cexpensetext"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Sample Temperature"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/tvSampleTeperature"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:background="@drawable/border_expense"
                        android:drawableEnd="@drawable/icon_downarrowbk"
                        android:drawableRight="@drawable/icon_downarrowbk"
                        android:hint="Select Sample Temperature"
                        android:padding="10dp"
                        android:textColor="@color/cexpensetext"
                        android:textSize="14sp" />

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/corier_accept_remark"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/edt_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_expense"
                    android:hint="Enter Remark"
                    android:padding="10dp"
                    android:textColor="@color/cexpensetext"
                    android:textSize="14sp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tube_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="6"
                        android:background="@color/lightyellow"
                        android:padding="5dp"
                        android:text="@string/tube_counts"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@color/lightyellow"
                        android:padding="5dp"
                        android:text="@string/Sent"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@color/lightyellow"
                        android:padding="5dp"
                        android:text="@string/Receive"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tube_counts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/lightyellow"
                android:padding="5dp"
                android:text="@string/test_counts"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_test_counts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imv_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/icon_camera" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/send_courier_photo"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="20dp"
                android:background="@color/light_blue"
                android:text="@string/btn_submit"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>

